tests/negative/contexts/invalid_entry_context.orng
// invalid_entry_context.orng:9:33: error: entry point can't request this context
// fn main() -> Int with My_Context {
//                                ^
// 
context My_Context {
    x: Int
}

fn main() -> Int with My_Context {
    My_Context.x
}